--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div><h1>Practicing with Git</h1></div>
+    <div>
+        <h1>Practicing with Git</h1>
+    </div>
+    <p>Quick way to push files!</p>
+    <ul>
+        <li>Edit File & Save</li>
+        <li>git add index.html</li>
+        <li>git remote -v</li>
+        <li> git push -f origin master</li>
+    </ul>
 </body>
+
 </html>
