--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <ul>
         <li>Edit File & Save</li>
         <li>git add index.html</li>
-        <li>git remote -v</li>
-        <li> git push -f origin master</li>
+        <li>git commit -m "Message here"</li>
+        <li> git push origin master</li>
     </ul>
 </body>
 
