editing index html file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Edit File & Save</li>
         <li>git add index.html</li>
         <li>git commit -m "Message here"</li>
-        <li> git push origin master</li>
+        <li> git push origin master or git push</li>
     </ul>
 </body>
 
